this is my second push

--- a/about.html
+++ b/about.html
@@ -6,32 +6,36 @@
     <title>portfolio</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body class ="abt">
-    <div id="mySidenav" class="sidenav">
-       
-        <a href="index.html" id="Home">Home<img src="home.png" class="icon" width="30px" height="35px"></a>
-        <a href="about.html" id="About">About<img src="about.png" class="icon" width="30px" height="35px"></a>
-        <a href="project.html" id="projects">Projects<img src="pj2.png" class="icon1" width="30px" height="35"></a>
-        <a href="contact.html" id="contact">Contact<img src="contact.png"class="icon1"width="30px" height="35"></a>
- <h2>Hlengiwe Mazibuko</h2>
- <p>I'm recent graduate in information of technology specializing in software development<br>
-    A curious driven programmer <strong>eager</strong> to learn and master dirverse programming languages and technologies.
-    Devout Christain,passionate about my faith<br>
-    I enjoy reading books and charishing moments with my family and friend
- </p>
-
-<h3> SKILLS
-
-    <ul>
-        <li>Basics of C++</li>
-        <li>Basics of HTML and CSS</li>
-        <li>Database:MySql oracle</li>
-        <li>troubleshooting technical issues<li>
-
-    </ul>
-</h3>
-
- 
+<body class="aboutP" >
    
+        <div  id="mySidenav" class="sidenav">
+        
+                <a href="index.html" id="Home">Home<img src="home.png" class="icon" width="30px" height="35px"></a>
+                <a href="about.html" id="About">About<img src="about.png" class="icon" width="30px" height="35px"></a>
+                <a href="project.html" id="projects">Projects<img src="pj2.png" class="icon1" width="25px" height="35"></a>
+                <a href="contact.html" id="contact">Contact<img src="contact.png"class="icon1"width="30px" height="35"></a>
+                <h2>Hlengiwe Mazibuko</h2>
+                <div class="aboutInfo">
+                <p>
+            I am a recent graduate in Information Technology, specializing in software development, with a deep passion for technology and innovation. As a curious and driven programmer, I thrive on exploring and mastering diverse programming languages and technologies, always seeking opportunities to grow and challenge myself. My dedication to problem-solving and creating impactful software solutions fuels my enthusiasm for continuous learning and improvement in this dynamic field.
+
+            Beyond my professional aspirations, I am a devout Christian who finds great joy and purpose in my faith. My spiritual beliefs guide me in fostering strong values such as integrity, compassion, and perseverance, which I aim to bring into both my personal and professional life.
+
+            In my leisure time, I enjoy reading books, as they provide an endless source of inspiration and knowledge. I also cherish moments spent with family and friends, as these connections ground me and remind me of the importance of community and shared experiences. With a heart committed to learning, creating, and connecting, I am excited about the journey ahead and the opportunities to contribute meaningfully to the tech industry and beyond
+                </p>
+
+                <h3> SKILLS
+
+            <ul>
+                <li>Basics of C++</li>
+                <li>Basics of HTML and CSS</li>
+                <li>Database:MySql oracle</li>
+                <li>troubleshooting technical issues<li>
+
+            </ul>
+       </h3>
+
+    </div>
+
 </body>
 </html>
