--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
        
         <a href="index.html" id="Home">Home<img src="home.png" class="icon" width="30px" height="35px"></a>
           <a href="about.html" id="About">About<img src="about.png" class="icon" width="30px" height="35px"></a>
-          <a href="projects.html" id="projects">Projects<img src="pj2.png" class="icon" width="30x" height="35"></a>
+          <a href="project.html" id="projects">Projects<img src="pj2.png" class="icon1" width="25x" height="35"></a>
           <a href="contact.html" id="contact">Contact<img src="contact.png"class="icon1"width="30px" height="35"></a>
       </div>
       <!DOCTYPE html>
