--- a/index.html
+++ b/index.html
@@ -11,11 +11,24 @@
 <body class ="index">
     <div id="mySidenav" class="sidenav">
        
-      <a href="index.html" id="Home">Home<img src="home.png" class="icon" width="30px" height="35px"></a>
-        <a href="about.html" id="About">About<img src="about.png" class="icon" width="30px" height="35px"></a>
-        <a href="projects.html" id="projects">Projects<img src="pj2.png" class="icon" width="30x" height="35"></a>
-        <a href="contact.html" id="contact">Contact<img src="contact.png"class="icon1"width="30px" height="35"></a>
+      <a href="index.html" id="Home">Home<img src="home.png" class="icon" width="35" height="30"></a>
+        <a href="about.html" id="About">About<img src="about.png" class="icon" width="30px" height="30x"></a>
+        <a href="project.html" id="projects">Projects<img src="pj2.png" class="icon1" width="25px" height="30px"></a>
+        <a href="contact.html" id="contact">Contact<img src="contact.png"class="icon1"width="30px" height="30"></a>
     </div>
- <div class ="text">Browse my portlio to discover what all about </div>
+    <main>
+      <section class="hero">
+      <div class="hleimg">
+        <img src="hle4.jpg" alt="Hleng the graduate">
+      </div>
+      <div class="hero_text">
+        <p>Hello, I'm</p>
+        <h1>Hlengiwe Mazibuko</h1>
+        <h3>IT Intern @ ABT Telecoms</h3>
+        <p>Frontend Developer | Software Developer Graduate</p>
+        
+      </div>
+      </section>
+    </main>
 </body>
 </html>
