--- a/project.html
+++ b/project.html
@@ -6,19 +6,32 @@
     <title>Projects</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body class="prjct">
     <div id="mySidenav" class="sidenav">
        
         <a href="index.html" id="Home">Home<img src="home.png" class="icon" width="30px" height="35px"></a>
           <a href="about.html" id="About">About<img src="about.png" class="icon" width="30px" height="35px"></a>
-          <a href="projects.html" id="projects">Projects<img src="pj2.png" class="icon" width="30x" height="35"></a>
+          <a href="project.html" id="projects">Projects<img src="pj2.png" class="icon1" width="25x" height="35"></a>
           <a href="contact.html" id="contact">Contact<img src="contact.png"class="icon1"width="30px" height="35"></a>
       </div>
       <h2>My projects</h2>
-      <div class="projects">
-<img src="cat.jpg">
-<p>click here to see more of this priject <a href="https://gratitudemwelase.github.io/catAppPhoto/">catAppPhoto</a><p2>
+<div class="imagecontainer">
+
+      <div class="projectImg">
+      <img src="cat.jpg" alt="">
+      <p><a href="https://gratitudemwelase.github.io/catAppPhoto/">catAppPhoto</a><p>
+      </div>
+
+      <div class="projectImg"> 
+        <img src="coffee.jpg" alt="" >
+        <p> <a href="https://gratitudemwelase.github.io/coffee">CoffeeMenu</a></p>
 
       </div>
+      <div class="projectImg">
+        <img src ="benji.jpg" alt="">
+<p><a href="https://gratitudemwelase.github.io/tribute/">Tribute of Benjamin Dube</a><p>
+        
+        </div>
+    </div>
 </body>
 </html>
