--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <main>
       <section class="hero">
       <div class="hleimg">
-        <img src="hle4.jpg" alt="Hleng the graduate">
+        <img src="indexpic.png" alt="Hleng the graduate">
       </div>
       <div class="hero_text">
         <p>Hello, I'm</p>
